--- a/photos.html
+++ b/photos.html
@@ -11,7 +11,7 @@
       font-family: 'SF Pro Display', sans-serif;
       background-color: white;
       width: 390px;
-      height: 690px;  /* 높이를 약간 줄임 */
+      height: 690px;
       overflow: hidden;
       position: relative;
     }
@@ -45,7 +45,7 @@
       gap: 1px;
       background-color: #e5e5e5;
       margin-top: -10px;
-      height: 520px; /* 사진 영역 제한 */
+      height: 520px;
       overflow: hidden;
     }
 
@@ -63,7 +63,7 @@
       margin: 4px 0;
       font-weight: 500;
       position: absolute;
-      bottom: 80px; /* 탭바 위에 띄움 */
+      bottom: 80px;
       width: 100%;
     }
 
@@ -96,36 +96,24 @@
       height: 24px;
       margin-bottom: 4px;
       fill: currentColor;
-      transition: transform 0.3s ease;
     }
 
-    /* "For You" 하트 아이콘의 빨간색 변환과 애니메이션 */
-    .tab-item.heart {
-      cursor: pointer;
+    /* ⭐ heart 애니메이션 관련 CSS */
+    .for-you-tab svg {
+      transition: transform 0.3s ease, fill 0.3s ease;
+      fill: #8e8e93;
     }
 
-    .tab-item.heart svg {
-      fill: #8e8e93; /* 기본 색상 */
-      transition: fill 0.3s ease;
+    .for-you-tab.clicked svg {
+      fill: #ff2d55;
+      animation: pop 0.4s ease;
     }
 
-    .tab-item.heart.active svg {
-      fill: #FF3B30; /* 빨간색 하트 */
-      animation: floatHeart 1s infinite; /* 하트 애니메이션 */
+    @keyframes pop {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.3); }
+      100% { transform: scale(1); }
     }
-
-    @keyframes floatHeart {
-      0% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
-      100% {
-        transform: translateY(0);
-      }
-    }
-
   </style>
 </head>
 <body>
@@ -156,40 +144,46 @@
       <svg viewBox="0 0 24 24"><path d="M21 19V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2zM5 5h14v14H5V5zm3 12l2.5-3.01L12 17l3.5-4.5L19 17H5z"/></svg>
       <div>보관함</div>
     </div>
-    <div class="tab-item">
-      <svg viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 
-      5.42 4.42 3 7.5 3c1.74 0 3.41 0.81 4.5 
-      2.09C13.09 3.81 14.76 3 16.5 3 19.58 
-      3 22 5.42 22 8.5c0 3.78-3.4 
-      6.86-8.55 11.54L12 21.35z"/></svg>
+    <a href="applemusic.html" class="tab-item for-you-tab" onclick="animateHeart(event)">
+      <svg id="heart-icon" viewBox="0 0 24 24">
+        <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 
+                2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41 
+                0.81 4.5 2.09C13.09 3.81 14.76 3 
+                16.5 3 19.58 3 22 5.42 22 
+                8.5c0 3.78-3.4 6.86-8.55 
+                11.54L12 21.35z"/>
+      </svg>
       <div>For You</div>
-    </div>
-    <div class="tab-item heart" onclick="window.location.href='applemusic.html';">
-      <svg viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 
-      5.42 4.42 3 7.5 3c1.74 0 3.41 0.81 4.5 
-      2.09C13.09 3.81 14.76 3 16.5 3 19.58 
-      3 22 5.42 22 8.5c0 3.78-3.4 
-      6.86-8.55 11.54L12 21.35z"/></svg>
-      <div>For You</div>
+    </a>
+    <div class="tab-item active">
+      <svg viewBox="0 0 24 24"><path d="M4 4h16v2H4V4zm0 4h10v2H4V8zm0 4h16v2H4v-2zm0 4h10v2H4v-2z"/></svg>
+      <div>앨범</div>
     </div>
     <div class="tab-item">
       <svg viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 
-      6.471 0 0016 9.5 6.5 6.5 0 109.5 
-      16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 
-      4.99L20.49 19l-4.99-5zm-6 
-      0C8.01 14 6 11.99 6 9.5S8.01 
-      5 10.5 5 15 7.01 15 9.5 12.99 
-      14 10.5 14z"/></svg>
+        6.471 0 0016 9.5 6.5 6.5 0 109.5 
+        16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 
+        4.99L20.49 19l-4.99-5zm-6 
+        0C8.01 14 6 11.99 6 9.5S8.01 
+        5 10.5 5 15 7.01 15 9.5 12.99 
+        14 10.5 14z"/></svg>
       <div>검색</div>
     </div>
   </div>
 
   <script>
-    const heartButton = document.querySelector('.tab-item.heart');
-    
-    heartButton.addEventListener('click', () => {
-      heartButton.classList.toggle('active');
-    });
+    function animateHeart(event) {
+      const icon = document.querySelector('.for-you-tab');
+      icon.classList.add('clicked');
+
+      // Prevent default link behavior
+      event.preventDefault();
+
+      // Delay navigation to allow animation to play
+      setTimeout(() => {
+        window.location.href = icon.getAttribute('href');
+      }, 300);
+    }
   </script>
 </body>
 </html>
