--- a/applemusic.html
+++ b/applemusic.html
@@ -396,6 +396,18 @@
       <div class="music-cover"></div>
       <div class="music-info">독 (feat. E SENS)</div>
     </li>
+     <li class="music-item">
+      <div class="music-cover"></div>
+      <div class="music-info">Mondegreen</div>
+    </li>
+     <li class="music-item">
+      <div class="music-cover"></div>
+      <div class="music-info">동그라미</div>
+    </li>
+     <li class="music-item">
+      <div class="music-cover"></div>
+      <div class="music-info">Shukumei</div>
+    </li>
   </ul>
 
   <div class="now-playing-bar">
