--- a/photos.html
+++ b/photos.html
@@ -6,8 +6,9 @@
   <title>Photos</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=SF+Pro+Display&display=swap">
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: 'SF Pro Display', sans-serif;
       background-color: white;
       width: 390px;
@@ -39,14 +40,20 @@
       font-weight: 600;
     }
 
+    .scroll-area {
+      position: absolute;
+      top: 110px;
+      bottom: 75px;
+      width: 100%;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 1px;
       background-color: #e5e5e5;
-      margin-top: -10px;
-      height: 520px;
-      overflow: hidden;
     }
 
     .photo {
@@ -60,11 +67,8 @@
       text-align: center;
       font-size: 15px;
       color: #444;
-      margin: 4px 0;
+      margin: 4px 0 12px;
       font-weight: 500;
-      position: absolute;
-      bottom: 80px;
-      width: 100%;
     }
 
     .tab-bar {
@@ -98,7 +102,6 @@
       fill: currentColor;
     }
 
-    /* ⭐ heart 애니메이션 관련 CSS */
     .for-you-tab svg {
       transition: transform 0.3s ease, fill 0.3s ease;
       fill: #8e8e93;
@@ -114,6 +117,36 @@
       50% { transform: scale(1.3); }
       100% { transform: scale(1); }
     }
+
+    /* ✅ 떠오르는 하트 애니메이션 */
+    .floating-heart {
+      position: absolute;
+      bottom: 80px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 20px;
+      height: 20px;
+      opacity: 1;
+      animation: floatUp 1.4s ease-out forwards;
+      z-index: 99;
+      pointer-events: none;
+    }
+
+    .floating-heart::before {
+      content: "❤️";
+      font-size: 20px;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateX(-50%) translateY(0) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translateX(-50%) translateY(-120px) scale(1.5);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
@@ -122,43 +155,49 @@
     <div class="title">최근 항목</div>
   </div>
 
-  <div class="grid">
-    <img src="pimages/p1.jpg" class="photo">
-    <img src="pimages/p2.jpg" class="photo">
-    <img src="pimages/p3.jpg" class="photo">
-    <img src="pimages/p4.jpg" class="photo">
-    <img src="pimages/p5.jpg" class="photo">
-    <img src="pimages/p6.jpg" class="photo">
-    <img src="pimages/p7.jpg" class="photo">
-    <img src="pimages/p8.jpg" class="photo">
-    <img src="pimages/p9.jpg" class="photo">
-    <img src="pimages/p10.jpg" class="photo">
-    <img src="pimages/p11.jpg" class="photo">
-    <img src="pimages/p12.jpg" class="photo">
+  <div class="scroll-area">
+    <div class="grid">
+      <img src="pimages/p1.jpg" class="photo">
+      <img src="pimages/p2.jpg" class="photo">
+      <img src="pimages/p3.jpg" class="photo">
+      <img src="pimages/p4.jpg" class="photo">
+      <img src="pimages/p5.jpg" class="photo">
+      <img src="pimages/p6.jpg" class="photo">
+      <img src="pimages/p7.jpg" class="photo">
+      <img src="pimages/p8.jpg" class="photo">
+      <img src="pimages/p9.jpg" class="photo">
+      <img src="pimages/p10.jpg" class="photo">
+      <img src="pimages/p11.jpg" class="photo">
+      <img src="pimages/p12.jpg" class="photo">
+    </div>
+    <div class="photo-count">1,107장의 사진, 23개의 비디오</div>
   </div>
-
-  <div class="photo-count">1,107장의 사진, 23개의 비디오</div>
 
   <div class="tab-bar">
     <div class="tab-item">
       <svg viewBox="0 0 24 24"><path d="M21 19V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2zM5 5h14v14H5V5zm3 12l2.5-3.01L12 17l3.5-4.5L19 17H5z"/></svg>
       <div>보관함</div>
     </div>
-    <a href="applemusic.html" class="tab-item for-you-tab" onclick="animateHeart(event)">
-      <svg id="heart-icon" viewBox="0 0 24 24">
-        <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 
-                2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41 
-                0.81 4.5 2.09C13.09 3.81 14.76 3 
-                16.5 3 19.58 3 22 5.42 22 
-                8.5c0 3.78-3.4 6.86-8.55 
-                11.54L12 21.35z"/>
-      </svg>
+
+    <div class="tab-item for-you-tab">
+      <a href="applemusic.html" onclick="animateHeart(event)">
+        <svg id="heart-icon" viewBox="0 0 24 24">
+          <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 
+                  2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41 
+                  0.81 4.5 2.09C13.09 3.81 14.76 3 
+                  16.5 3 19.58 3 22 5.42 22 
+                  8.5c0 3.78-3.4 6.86-8.55 
+                  11.54L12 21.35z"/>
+        </svg>
+      </a>
       <div>For You</div>
-    </a>
+    </div>
+
     <div class="tab-item active">
       <svg viewBox="0 0 24 24"><path d="M4 4h16v2H4V4zm0 4h10v2H4V8zm0 4h16v2H4v-2zm0 4h10v2H4v-2z"/></svg>
       <div>앨범</div>
     </div>
+
     <div class="tab-item">
       <svg viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 
         6.471 0 0016 9.5 6.5 6.5 0 109.5 
@@ -176,12 +215,25 @@
       const icon = document.querySelector('.for-you-tab');
       icon.classList.add('clicked');
 
-      // Prevent default link behavior
-      event.preventDefault();
+      setTimeout(() => icon.classList.remove('clicked'), 400);
 
-      // Delay navigation to allow animation to play
+      // ❤️ 하트 여러 개 떠오르기
+      for (let i = 0; i < 4; i++) {
+        const heart = document.createElement('div');
+        heart.className = 'floating-heart';
+        heart.style.left = `${48 + (Math.random() * 4 - 2)}%`;
+        heart.style.animationDelay = `${i * 0.1}s`;
+        document.body.appendChild(heart);
+
+        setTimeout(() => {
+          heart.remove();
+        }, 1600);
+      }
+
+      // 페이지 이동
+      event.preventDefault();
       setTimeout(() => {
-        window.location.href = icon.getAttribute('href');
+        window.location.href = icon.querySelector('a').getAttribute('href');
       }, 300);
     }
   </script>
