--- a/photos.html
+++ b/photos.html
@@ -17,16 +17,18 @@
       position: relative;
     }
 
-    .overlay {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 110px;
-      background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0));
-      color: white;
-      padding: 20px 12px 0;
-      z-index: 1;
-    }
+  .overlay {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 110px;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0));  /* ✅ 사진 위 그라데이션 */
+    color: white;
+    padding: 20px 12px 0;
+    z-index: 2; /* ✅ 사진 위에 뜨도록 z-index 조정 */
+    pointer-events: none; /* ✅ 스크롤 가능하게 텍스트는 클릭 안 받음 */
+  }
+
 
     .overlay span {
       display: block;
