--- a/photos.html
+++ b/photos.html
@@ -171,6 +171,12 @@
       <img src="pimages/p10.jpg" class="photo">
       <img src="pimages/p11.jpg" class="photo">
       <img src="pimages/p12.jpg" class="photo">
+      <img src="pimages/p10.jpg" class="photo">
+      <img src="pimages/p11.jpg" class="photo">
+      <img src="pimages/p12.jpg" class="photo">
+      <img src="pimages/p10.jpg" class="photo">
+      <img src="pimages/p11.jpg" class="photo">
+      <img src="pimages/p12.jpg" class="photo">
     </div>
     <div class="photo-count">1,107장의 사진, 23개의 비디오</div>
   </div>
