--- a/applemusic.html
+++ b/applemusic.html
@@ -385,9 +385,12 @@
 
   <ul class="music-list">
     <li class="music-item">
-      <div class="music-cover"></div>
-      <div class="music-info">0310</div>
-    </li>
+  <iframe allow="autoplay *; encrypted-media *;" frameborder="0"
+    height="60" style="width:100%;max-width:360px;overflow:hidden;background:transparent;border:none"
+    sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation"
+    src="https://embed.music.apple.com/kr/album/첫-만남은-계획대로-되지-않아/1723932647?i=1723932648">
+  </iframe>
+</li>
     <li class="music-item">
       <div class="music-cover"></div>
       <div class="music-info">우주선</div>
