--- a/applemusic.html
+++ b/applemusic.html
@@ -385,12 +385,9 @@
 
   <ul class="music-list">
     <li class="music-item">
-  <iframe allow="autoplay *; encrypted-media *;" frameborder="0"
-    height="60" style="width:100%;max-width:360px;overflow:hidden;background:transparent;border:none"
-    sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation"
-    src="https://embed.music.apple.com/kr/album/첫-만남은-계획대로-되지-않아/1723932647?i=1723932648">
-  </iframe>
-</li>
+      <div class="music-cover"></div>
+      <div class="music-info">0310</div>
+    </li>
     <li class="music-item">
       <div class="music-cover"></div>
       <div class="music-info">우주선</div>
@@ -410,6 +407,14 @@
      <li class="music-item">
       <div class="music-cover"></div>
       <div class="music-info">Shukumei</div>
+    </li>
+    <li class="music-item">
+      <div class="music-cover"></div>
+      <div class="music-info">나무</div>
+    </li>
+    <li class="music-item">
+      <div class="music-cover"></div>
+      <div class="music-info">고백</div>
     </li>
   </ul>
 
