--- a/applemusic.html
+++ b/applemusic.html
@@ -365,8 +365,24 @@
     <div class="playlist-updated">1주일 전 업데이트됨</div>
 
     <div class="controls">
-      <button class="play-btn">재생</button>
-      <button class="shuffle-btn">임의 재생</button>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ff2d55" viewBox="0 0 16 16">
+      <path d="M4 3.993v8.014c0 .53.608.846 1.043.53l6.07-4.007a.636.636 0 000-1.06L5.043 3.462A.636.636 0 004 3.993z"/>
+    </svg>
+    재생
+  </button>
+
+  <button class="shuffle-btn">
+    <span class="icon">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+           fill="none" stroke="#ff2d55" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M3 6h3c2 0 4 4 6 6s4 4 6 4" />
+        <polyline points="18 14 21 16 18 18" transform="translate(0 -8)" />
+        <path d="M3 18h3c2 0 4-4 6-6s4-4 6-4" />
+        <polyline points="18 14 21 16 18 18" transform="translate(0 0)" />
+      </svg>
+    </span>
+    임의 재생
+  </button>
     </div>
 
     <ul class="music-list">
