--- a/applemusic.html
+++ b/applemusic.html
@@ -387,35 +387,35 @@
 
     <ul class="music-list">
       <li class="music-item">
-        <div class="music-cover" style="background-image: url('aimages/a1.JPG');"></div>
+        <div class="music-cover" style="background-image: url('aimages/a1.jpg');"></div>
         <div class="music-info">0310<div class="artist">백예린</div></div>
       </li>
       <li class="music-item">
-        <div class="music-cover" style="background-image: url('aimages/a2.JPG');"></div>
+        <div class="music-cover" style="background-image: url('aimages/a2.jpg');"></div>
         <div class="music-info">우주선<div class="artist">정승환</div></div>
       </li>
       <li class="music-item">
-        <div class="music-cover" style="background-image: url('aimages/a3.JPG');"></div>
+        <div class="music-cover" style="background-image: url('aimages/a3.jpg');"></div>
         <div class="music-info">독 (feat. E SENS)<div class="artist">프라이머리</div></div>
       </li>
       <li class="music-item">
-        <div class="music-cover" style="background-image: url('aimages/a4.JPG');"></div>
+        <div class="music-cover" style="background-image: url('aimages/a4.jpg');"></div>
         <div class="music-info">Mondegreen<div class="artist">데이먼스 이어</div></div>
       </li>
       <li class="music-item">
-        <div class="music-cover" style="background-image: url('aimages/a5.JPG');"></div>
+        <div class="music-cover" style="background-image: url('aimages/a5.jpg');"></div>
         <div class="music-info">동그라미<div class="artist">최유리</div></div>
       </li>
       <li class="music-item">
-        <div class="music-cover" style="background-image: url('aimages/a6.JPG');"></div>
+        <div class="music-cover" style="background-image: url('aimages/a6.jpg');"></div>
         <div class="music-info">Shukumei<div class="artist">OFFICIAL HIGE DANDISM</div></div>
       </li>
       <li class="music-item">
-        <div class="music-cover" style="background-image: url('aimages/a7.JPG');"></div>
+        <div class="music-cover" style="background-image: url('aimages/a7.jpg');"></div>
         <div class="music-info">고백<div class="artist">정준일</div></div>
       </li>
       <li class="music-item">
-        <div class="music-cover" style="background-image: url('aimages/a8.JPG');"></div>
+        <div class="music-cover" style="background-image: url('aimages/a8.jpg');"></div>
         <div class="music-info">나무<div class="artist">카더가든</div></div>
       </li>
     </ul>
