--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=390, user-scalable=no" />
   <title>iMessage</title>
   <style>
+    /* 기존 스타일 유지 */
+
     * {
       box-sizing: border-box;
       margin: 0;
@@ -128,6 +130,10 @@
       user-select: none;
     }
 
+    .messages::-webkit-scrollbar {
+      display: none;
+    }
+
     .typing {
       width: 50px;
       height: 24px;
@@ -144,12 +150,23 @@
       animation: blink 1.4s infinite ease-in-out both;
     }
 
-    .dot:nth-child(2) { animation-delay: 0.2s; }
-    .dot:nth-child(3) { animation-delay: 0.4s; }
+    .dot:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .dot:nth-child(3) {
+      animation-delay: 0.4s;
+    }
 
     @keyframes blink {
-      0%, 80%, 100% { transform: scale(0.8); opacity: 0.3; }
-      40% { transform: scale(1); opacity: 1; }
+      0%, 80%, 100% {
+        transform: scale(0.8);
+        opacity: 0.3;
+      }
+      40% {
+        transform: scale(1);
+        opacity: 1;
+      }
     }
 
     .image-message {
@@ -158,8 +175,51 @@
       object-fit: cover;
       opacity: 0;
       animation: messageSend 0.3s ease forwards;
-      transition: transform 0.3s ease;
+      transition: transform 0.15s ease, filter 0.15s ease;
       cursor: pointer;
+    }
+
+    .image-message:active {
+      transform: scale(0.92);
+      filter: brightness(85%);
+    }
+
+    @keyframes emojiExplosion {
+      0% {
+        transform: scale(1) translate(0, 0);
+        opacity: 1;
+      }
+      100% {
+        transform: scale(2) translate(var(--x), var(--y));
+        opacity: 0;
+      }
+    }
+
+    .icon:active,
+    .send-button:active {
+      transform: scale(0.92);
+      transition: transform 0.1s ease-out;
+    }
+
+    .zoom-out {
+      transform: scale(1.05);
+      opacity: 0;
+      transition: transform 0.4s ease, opacity 0.4s ease;
+    }
+
+    /* 새로 추가: 오버레이 + 이모티콘 UI */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 390px;
+      height: 844px;
+      backdrop-filter: blur(12px);
+      background-color: rgba(255, 255, 255, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
     }
 
     .emoji-popup {
@@ -171,25 +231,14 @@
       gap: 12px;
       font-size: 24px;
       cursor: pointer;
-      position: absolute;
-      top: -50px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 1001;
     }
 
-    .emoji-popup div { transition: transform 0.2s ease; }
-    .emoji-popup div:active { transform: scale(1.3); }
+    .emoji-popup div {
+      transition: transform 0.2s ease;
+    }
 
-    .blur-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 390px;
-      height: 844px;
-      backdrop-filter: blur(15px);
-      background-color: rgba(255, 255, 255, 0.3);
-      z-index: 1000;
+    .emoji-popup div:active {
+      transform: scale(1.3);
     }
 
   </style>
@@ -199,8 +248,10 @@
     <div class="messages" id="messages"></div>
 
     <div class="input-area">
-      <div class="input-icons"><div class="icon">+</div></div>
-      <input type="text" id="messageInput" placeholder="iMessage" />
+      <div class="input-icons">
+        <div class="icon">+</div>
+      </div>
+      <input type="text" id="messageInput" placeholder="iMessage">
       <div class="send-button" onclick="sendMessage()">↑</div>
     </div>
   </div>
@@ -220,34 +271,8 @@
 
         img.onclick = (e) => {
           e.preventDefault();
-
-          // 블러 오버레이 생성
-          const blur = document.createElement('div');
-          blur.className = 'blur-overlay';
-
-          // 이모지 팝업
-          const popup = document.createElement('div');
-          popup.className = 'emoji-popup';
-
-          const emojis = ['❤️', '👍', '👎', '😂', '‼️', '❓'];
-          emojis.forEach((emoji) => {
-            const e = document.createElement('div');
-            e.textContent = emoji;
-            e.onclick = () => {
-              document.body.removeChild(blur);
-              popup.remove();
-              if (emoji === '❤️') triggerEmojiExplosionAndRedirect();
-            };
-            popup.appendChild(e);
-          });
-
-          // 확대
-          img.style.transform = 'scale(1.1)';
-          img.style.zIndex = '1001';
-
-          // overlay 위에 이모지 추가
-          blur.appendChild(popup);
-          document.body.appendChild(blur);
+          img.classList.add('zoom-out');
+          showEmojiPopup();
         };
 
         wrapper.appendChild(img);
@@ -291,17 +316,47 @@
       input.value = '';
     }
 
+    function showEmojiPopup() {
+      const overlay = document.createElement('div');
+      overlay.className = 'overlay';
+
+      const popup = document.createElement('div');
+      popup.className = 'emoji-popup';
+      
+  // ✅ 여기에 위치 설정 추가
+  popup.style.position = 'absolute'; // 또는 fixed, overlay 스타일에 따라
+  popup.style.top = '120px'; // 원하는 y축 위치
+  popup.style.left = '55%'; // 가운데 정렬하려면
+  popup.style.transform = 'translateX(-50%)'; // x축 중앙 정렬 보정
+
+      const emojis = ['❤️', '👍', '👎', '😂', '‼️', '❓'];
+      emojis.forEach((emoji) => {
+        const e = document.createElement('div');
+        e.textContent = emoji;
+        if (emoji === '❤️') {
+          e.onclick = () => {
+            document.body.removeChild(overlay);
+            triggerEmojiExplosionAndRedirect();
+          };
+        }
+        popup.appendChild(e);
+      });
+
+      overlay.appendChild(popup);
+      document.body.appendChild(overlay);
+    }
+
     function triggerEmojiExplosionAndRedirect() {
       const emojis = ['😍', '😎', '🥰', '💕', '❤️'];
-      const container = document.createElement('div');
-      container.style.position = 'fixed';
-      container.style.top = 0;
-      container.style.left = 0;
-      container.style.width = '100%';
-      container.style.height = '100%';
-      container.style.pointerEvents = 'none';
-      container.style.zIndex = '9999';
-      document.body.appendChild(container);
+      const explosionContainer = document.createElement('div');
+      explosionContainer.style.position = 'fixed';
+      explosionContainer.style.top = '0';
+      explosionContainer.style.left = '0';
+      explosionContainer.style.width = '100%';
+      explosionContainer.style.height = '100%';
+      explosionContainer.style.pointerEvents = 'none';
+      explosionContainer.style.zIndex = '9999';
+      document.body.appendChild(explosionContainer);
 
       for (let i = 0; i < 80; i++) {
         const emoji = document.createElement('div');
@@ -310,10 +365,10 @@
         emoji.style.left = '50%';
         emoji.style.top = '50%';
         emoji.style.fontSize = '28px';
-        emoji.style.setProperty('--x', `${Math.random() * 400 - 200}px`);
-        emoji.style.setProperty('--y', `${Math.random() * 400 - 200}px`);
-        emoji.style.animation = `emojiExplosion 1s forwards`;
-        container.appendChild(emoji);
+        emoji.style.setProperty('--x', ${Math.random() * 400 - 200}px);
+        emoji.style.setProperty('--y', ${Math.random() * 400 - 200}px);
+        emoji.style.animation = emojiExplosion 1s forwards;
+        explosionContainer.appendChild(emoji);
       }
 
       setTimeout(() => {
@@ -325,17 +380,17 @@
       appendMessage('지금은 수업 중입니다.', true);
 
       setTimeout(() => {
-        const typing = showTypingIndicator();
+        const typingBubble = showTypingIndicator();
 
         setTimeout(() => {
-          typing.remove();
+          typingBubble.remove();
           appendMessage('그렇습니까', false);
 
           setTimeout(() => {
             appendMessage('보고싶습니당', false);
 
             setTimeout(() => {
-              appendMessage('', false, true); // 이미지 메시지
+              appendMessage('', false, true);
             }, 1000);
           }, 1000);
         }, 1000);
